[package]
name = "async_events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Asynchronous Events Pub/Sub Library"
repository = "https://github.com/milyin/async-events"
# documentation = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.futures]
version = "0.3.17"
features = ["thread-pool"]

[dev-dependencies]
async-std = "1.11.0"
