[package]
name = "async_event_streams"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Asynchronous Events Pub/Sub Library"
repository = "https://github.com/milyin/async-event-streams"
# documentation = ""
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.11.0"
async-trait = "0.1.56"

[dependencies.futures]
version = "0.3.17"
features = ["thread-pool"]

[dev-dependencies]
async-std = "1.11.0"
async_event_streams_derive = "0.1.0"
