[package]
name = "async_event_streams_derive"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Asynchronous Events Pub/Sub Library"
repository = "https://github.com/milyin/async-event-streams/tree/main/async-event-streams-derive"
# documentation = ""
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
# async_object = "0.1.0"
async_event_streams = "0.1.2"
proc-macro2 = "1.0"
futures = "0.3"


[dev-dependencies]
async-std = "1.11.0"
async-trait = "0.1.56"
